--- a/widget/app/less/overlay-widget.less
+++ b/widget/app/less/overlay-widget.less
@@ -358,17 +358,20 @@
 							line-height: @dg-widget-overlay-header-height;
 							padding: 0 20px;
 							margin: 0 25px;
-							transition: color 0.3s ease;
+							transition: color 0.3s ease,
+										background-color 0.25s ease;
 							cursor: pointer;
 							font-weight: 100;
 							font-size: 18px;
 
 							&:hover {
-								color: @color-green;
+//								color: @color-green;
+								background-color: rgba(255,255,255,0.15);
 							}
 
 							&.dg-o-w-active {
-								color: @color-green;
+//								color: @color-green;
+								background-color: @color-brand-lighter;
 							}
 						}
 					}
@@ -377,10 +380,19 @@
 						height: 100%;
 						min-width: 200px;
 						padding-right: 30px;
+						padding-left: 30px;
 						float: right;
 						font-size: 0;
 						line-height: @dg-widget-overlay-header-height;
 						text-align: left;
+
+						&:hover {
+							background-color: rgba(255,255,255,0.15);
+						}
+
+						&.dg-o-w-active {
+							background-color: @color-brand-lighter;
+						}
 
 						img {
 							width: 40px;
